feat(4): (#2)
* feat(4):
All tasks completed.
Additional (optional) tasks:
  +1 - POST/products lambda functions returns error 400 status code if product data is invalid
  +1 - All lambdas return error 500 status code on any error (DB connection, any unhandled error in code)
  +1 - All lambdas do console.log for each incoming requests and their arguments
  +1 - Transaction based creation of product

endpoints:
  GET - https://gv7d9a48r7.execute-api.us-east-1.amazonaws.com/dev/products
  GET - https://gv7d9a48r7.execute-api.us-east-1.amazonaws.com/dev/products/c9380100-7a0a-47c8-af35-f7e36f6bda00
  POST - https://gv7d9a48r7.execute-api.us-east-1.amazonaws.com/dev/products

FE:
  PR: https://github.com/dartwlad/nodejs-aws-fe/pull/3
  https://d2igrds53f0okp.cloudfront.net
  https://d2igrds53f0okp.cloudfront.net/admin/product-form/

* fix(4): fixed deploy, transactions and credentials
